<resources>
    <string name="app_name">Activity</string>
    <string name="ok">ok</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="username_field">Please enter your username</string>
    <string name="Username">Username:</string>
    <string name="Submit">Submit</string>
    <string name="Password">Password:</string>
    <string name="Password_field">Please enter your password</string>
    <string name="Confirm">Confirm password</string>
    <string name="Confirm_field">Please confirm your password</string>
</resources>
